intro: Little more structure

--- a/intro.tex
+++ b/intro.tex
@@ -1,5 +1,9 @@
 \chapter{Introduction}
 
+something about my PhD research (past work on portfolios, etc.)
+
+\section{Question Answering}
+
 We consider the Question Answering problem --- a function of
 unstructured user query that returns the information queried for.
 This is a harder problem than a linked data graph search (which requires
@@ -54,5 +58,6 @@ but this precludes any reasoning or other indirect answer synthesis on the part 
 while the context and supporting evidence can be still provided by the user interface.
 Direct answer output may be also used in a more general AI reasoning engine.
 
+\section{This Thesis}
 
 TODO summary of rest of thesis
