Intro: This Thesis Proposal

--- a/intro.tex
+++ b/intro.tex
@@ -58,6 +58,18 @@ but this precludes any reasoning or other indirect answer synthesis on the part 
 while the context and supporting evidence can be still provided by the user interface.
 Direct answer output may be also used in a more general AI reasoning engine.
 
-\section{This Thesis}
+\section{This Thesis Proposal}
 
-TODO summary of rest of thesis
+The rest of this proposal shall focus on building a case for writing
+a thesis on the topic of question answering systems.
+Chapter~\ref{ch:survey}
+surveys the field in detail, examining different formulations of the problem
+as well as a variety of sub-tasks, reference datasets and approaches,
+and recent progress in the field.
+Chapter~\ref{ch:work} describes
+the work I have done on the thesis so far --- this revolves mainly around
+the question answering system YodaQA that I have built, but also progress
+on some of the QA sub-tasks.
+Chapter~\ref{ch:plan} outlines some of the specific problems of QA
+to focus on in the thesis.
+We conclude the proposal with Chapter~\ref{ch:concl}.
