--- a/survey.tex
+++ b/survey.tex
@@ -1,4 +1,5 @@
 \chapter{State of the Art in Factoid Question Answering}
+\label{ch:survey}
 
 Basic division:  Querying for answers on structured knowledge bases,
 finding answers in unstructured (text) data.
