intro: Question Answering (rewrite)

--- a/survey.tex
+++ b/survey.tex
@@ -4,19 +4,9 @@
 Basic division:  Querying for answers on structured knowledge bases,
 finding answers in unstructured (text) data.
 
-TODO existing systems
+TODO more existing systems
 
-In this paper, we present our open source Question Answering system
-\textbf{brmson{\,\footnotesize\texttrademark{}} YodaQA}.  This is not the only open source QA framework
-currently available, but we found our goals not entirely compatible
-with any of the other systems we investigated.
-Specifically, we aim to build a system that
-(A) provides an end-to-end, universal pipeline integrating different
-knowledge base paradigms in a modular fashion;
-(B) is domain flexible and could cater even to the long tail of rarer
-question subjects, therefore has minimum of fixed categories and hand-coded rules.
-
-In contrast, the classic QA system \textbf{OpenEphyra} \cite{Ephyra2006}
+The classic QA system \textbf{OpenEphyra} \cite{Ephyra2006}
 operates on the basis of fixed question categories with hand-crafted rules,
 and puts emphasis on querying web search engines.
 The \textbf{OAQA} initiative \cite{OAQATowards} has developed a basic QA framework,
@@ -237,3 +227,7 @@ Full-scale end-to-end systems combining structured and unstructured approaches.
 \textbf{(DeepQA IBM Watson)} \cite{WatsonOverview}
 
 \textbf{YodaQA: A Modular Question Answering System Pipeline} \cite{YodaQAPoster2015}
+
+\section{Non-Factoid QA}
+
+TODO very short overview.  The MemNN task.  Text entailment.
