--- a/intro.tex
+++ b/intro.tex
@@ -24,7 +24,7 @@ with applications particularly in continuous black-box optimization.
 The results of my work have been a software framework for experiments
 \cite{COCOpf}
 and two results published at top-tier conferences \cite{optpf,ndsqistep}.
-This research has been primarily supervised by Dr. Petr Pošík.
+This research had been primarily supervised by Dr. Petr Pošík.
 
 Let us consider the problem of finding a minimum value of a continuous
 real-parameter function that has inaccessible analytical form.%
@@ -113,37 +113,60 @@ This result has been presented on the GECCO 2015 conference.
 
 \section{Question Answering}
 
-Quick summary.
+The current focus of my doctoral research
+is improving the state-of-art in the field of factoid question answering.
+My main results so far have been
+building an extensive question answering system \textbf{YodaQA} \cite{YodaQAPoster2015}
+and proposing a high-quality dataset \cite{YodaQACLEF2015},
+but I have also applied the system to a biological QA domain \cite{YodaQABioASQ2015}
+and achieved some new results not published yet (described later in the proposal).
+This research is primarily supervised by Dr. Jan Šedivý;
+some of the newest results have been achieved while collaborating
+with intern students in our group.
 
-TODO revise
+\subsection{Factoid Question Answering}
 
-We consider the Question Answering problem --- a function of
+Let us consider the Question Answering problem --- a function of
 unstructured user query that returns the information queried for.
 This is a harder problem than a linked data graph search (which requires
 a precisely structured user query) or a generic search engine (which
 returns whole documents or sets of passages instead of the specific
 information).
+
 The Question Answering task is however a natural extension of a search
 engine, as currently employed e.g.\ in Google Search \cite{googleKG}
 or personal assistants like Apple Siri, and with the high
 profile IBM Watson Jeopardy! matches \cite{WatsonOverview}
 it has became a benchmark of progress in AI research.
-As we are interested in a general purpose QA system, we will consider
-an ``open domain'' general factoid question answering, rather than
-domain-specific applications, though we keep flexibility in this direction
-as one of our goals.
+
+My goal is ultimately building a general purpose QA system.
+Thus, I consider an ``open domain'' general factoid question answering,
+rather than domain-specific applications, though keeping flexibility
+in this direction is certainly worthwhile.
+
+TODO some examples of questions and answers
+
+\subsection{Problem Structure}
 
 Diverse QA system architectures have been proposed in the last 15 years,
 applying different approaches to information retrieval.  A full survey
-is beyong the scope of this paper, but let us outline at least the most
-basic choices we faced when designing our system.
+follows, for now let me outline at least the most basic choices I faced
+when designing my system.
 
-Perhaps the most popular approach in QA research has been restricting
+First, the restriction to \textbf{factoid} questions means the system
+is essentially an extension of a search engine (rather than deducing
+facts logically) and should return precisely specified, relatively short
+text snippets as short answers.  Answering happens mainly based on fact
+lookup.  This is in contrast with different question answering tasks
+(like Language Comprehension Entrance Exams) where the system needs to
+process a text passage and answer tricky questions about the text meaning.
+
+Perhaps the most popular approach in factoid QA research has been restricting
 the task to querying structured knowledge bases, typically using the
 RDF paradigm and accessible via SPARQL\@.  The QA problem can
 be then rephrased as learning a function translating free-text user query
 to a structured lambda expression or SPARQL query. \cite{Semantic2013Berant} \cite{Semantic2014Bordes}
-We prefer to focus on unstructured datasets as the coverage of the system
+I prefer to focus on unstructured datasets as the coverage of the system
 as well as domain versatility increases dramatically; building a combined
 portfolio of structured and unstructured knowledge bases
 is then again an obvious extension.
@@ -152,10 +175,11 @@ When relying on unstructured knowledge bases, a common strategy is to offload
 the information retrieval on an external high-quality web search engine
 like Google or Bing (see e.g.\ the \textbf{Mulder} system \cite{MulderKwok}
 or many others).
-We make a point of relying purely on local information sources.
+I make a point of relying purely on local information sources.%
+\footnote{However, as non-benchmarked extension, YodaQA also includes
+	Bing search as described in Sec.~\ref{sec:bing}.}
 While the task becomes noticeably harder,
-%as we index significantly less data and search results may not be that well sorted,
-we believe the result is a more
+I believe the result is a more
 universal system that could be readily refocused on a specific domain
 or proprietary knowledge base, and also a system more appropriate as
 a scientific platform as the results are fully reproducible over time.
@@ -169,7 +193,15 @@ system by itself.
 It may be argued that returning a whole passage is more useful for the user than a direct narrow answer,
 but this precludes any reasoning or other indirect answer synthesis on the part of the system,
 while the context and supporting evidence can be still provided by the user interface.
-Direct answer output may be also used in a more general AI reasoning engine.
+Direct answer output may be also used in a more general AI reasoning engine,
+an idea that I keep in sight during the design process but is clearly
+out of scope for the thesis I propose.
+
+Therefore, the system I propose should produce short, clear answers
+based on information retrieval from both
+unstructured (full-text) and structured (database) knowledge bases,
+and not rely on any ``omniscient web search'' to make the task easier
+specifically in the open domain setting.
 
 \section{This Thesis Proposal}
 
@@ -185,4 +217,4 @@ the question answering system YodaQA that I have built, but also progress
 on some of the QA sub-tasks.
 Chapter~\ref{ch:plan} outlines some of the specific problems of QA
 to focus on in the thesis.
-We conclude the proposal with Chapter~\ref{ch:concl}.
+I conclude the proposal with a summary in Chapter~\ref{ch:concl}.
