--- a/concl.tex
+++ b/concl.tex
@@ -8,11 +8,11 @@ of factoid question answering.
 So far, I have built a question answering system that exhibits
 TODO performance and is still rapidly improving.  I have also
 managed to reproduce state-of-art results in some of the sub-tasks
-and identified and proposed a few original tasks tied to building
-a state-of-art system in a real-world setting.
+and identified and proposed a few tasks on my own that are tied
+to building a state-of-art system in a real-world setting.
 
 In my thesis, apart of describing my system building work, I would
-like to focus on research connected to the Information Extraction
+like to focus particularly on research connected to the Information Extraction
 portion of the system.
 
 As discussed above, vector embeddings are a booming area of semantic
@@ -20,7 +20,7 @@ NLP research with their ability to numerically capture meaning nuances,
 and based on the presented survey of the field, I believe looking into
 vector embedding approaches when manipulating natural text
 (analyzing the question, understanding answer-bearing
-passages and relation labels) is a perspective area of research.
+passages and relation labels) is a highly promising area of research.
 
 Some scientific problems that I would like to tackle are connected
 to the current limitations of vector embeddings themselves.
@@ -30,16 +30,17 @@ and
 exploring ways to embed or tie named entities, numerical quantities
 and other arbitrary data to the conventional embeddings.
 
-The scientific problems related to Information Extraction that
+Other scientific problems related to Information Extraction that
 I plan to explore are in particular testing various relation
 extraction strategies in the unstructured knowledge base context
 and improving performance in this sub-task.
-I expect to make the most progress by building embedded
-representation of the manipulated data and leveraging it for
-building appropriate classifiers.
-It is unclear if that will eventually end up in the scope of my
-thesis as well, but my sight is also set at using embeddings even
-for tasks beyond basic factoid QA, like performing basic inference.
+I expect to achieve the best results by building embedded
+representation of the manipulated data and leveraging it within
+the appropriate classifiers.
+My sight is also set at using embeddings even
+for tasks beyond basic factoid QA like performing basic inference,
+though it is unclear if it will eventually fall in the scope of my
+thesis as well.
 
 However, improving the system performance might lead to interesting
 results in other parts of the system, involving Entity Linking,
@@ -49,7 +50,8 @@ Information Retrieval, Result Ranking etc.
 
 I would like to thank my main supervisor Dr. Petr Pošík
 for his guidance, support, but also giving me the freedom to
-eventually take a different direction of scientific pursuit.
+eventually take a different direction of scientific pursuit
+than we originally planned.
 I would also like to thank my specialist supervisor Dr. Jan Šedivý
 for supporting me in this new topic of research, his result-focused
 guidance and giving me great opportunities to boost the development
